--- a/src/main/resources/templates/area/findById.html
+++ b/src/main/resources/templates/area/findById.html
@@ -55,6 +55,7 @@
                                     <div class="d-flex">
                                     <a class="btn btn-primary mr-2" th:href="@{/elevator/{elevatorId}(elevatorId=${elevator.id})}">Get Info</a>
                                     <!-- Add Delete Elevator Button -->
+                                        <a th:if="${role == 'ADMIN' || role == 'MANAGER'}"  class="btn btn-success mr-2" th:href="@{/elevator/{elevatorId}/edit(elevatorId=${elevator.id})}">Edit</a>
                                     <form  th:if="${role == 'ADMIN' || role == 'MANAGER'}" method="POST" th:action="@{/elevator/delete/{id}(id=${elevator.id})}" onsubmit="return confirmDelete(event)">
                                         <button class="btn btn-danger" type="submit" name="elevatorId" th:value="${elevator.id}">Delete</button>
                                     </form>
