--- a/src/main/resources/templates/elevator/edit.html
+++ b/src/main/resources/templates/elevator/edit.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <title>Add Elevator</title>
+    <title>Edit Elevator</title>
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
 <div class="container mt-5">
-    <h1>Add Elevator</h1>
+    <h1>Edit Elevator</h1>
     <div th:replace="fragments/message :: div"></div>
-    <form th:action="@{/area/{areaId}/add-elevator(areaId=${areaId})}" method="post">
+    <form th:action="@{/elevator/{elevatorId}/edit(elevatorId=${elevator.id})}" method="post">
+        <div class="form-group" hidden>
+            <label for="elevatorId">Elevator Id:</label>
+            <input type="text" class="form-control" id="elevatorId" name="elevatorId" required th:field="*{elevator.id}">
+        </div>
+
         <div class="form-group">
             <label for="elevatorName">Elevator Name:</label>
             <input type="text" class="form-control" id="elevatorName" name="name" required th:value="${elevator.name}">
@@ -20,7 +25,8 @@
             <div class="form-group col-md-6">
                 <label for="numFloors">Number of Ground Floors:</label>
                 <div class="input-group">
-                    <input type="number" class="form-control" id="numFloors" name="numFloors" required>
+                    <input type="number" class="form-control" id="numFloors" name="numFloors" required
+                           th:value="${#strings.isEmpty(elevator.listFloors) ? 0 : elevator.listFloors.split('->').length}">
                     <div class="input-group-append">
                         <button type="button" class="btn btn-outline-secondary" id="generateFloors">Generate Floor List</button>
                     </div>
@@ -29,7 +35,8 @@
             <div class="form-group col-md-6">
                 <label for="numBasements">Number of Basements:</label>
                 <div class="input-group">
-                    <input type="number" class="form-control" id="numBasements" name="numBasements" required>
+                    <input type="number" class="form-control" id="numBasements" name="numBasements" required
+                           th:value="${#strings.isEmpty(elevator.listBasements) ? 0 : elevator.listBasements.split('->').length}">
                     <div class="input-group-append">
                         <button type="button" class="btn btn-outline-secondary" id="generateBasements">Generate Basement List</button>
                     </div>
@@ -38,11 +45,11 @@
         </div>
         <div class="form-group">
             <label for="floorsList">List of Floors:</label>
-            <input type="text" class="form-control" id="floorsList" name="listFloors" th:value="${elevator.listFloors}" readonly required>
+            <input type="text" class="form-control" id="floorsList" name="listFloors" th:value="${elevator.listFloors}" required>
         </div>
         <div class="form-group">
             <label for="basementsList">List of Basements:</label>
-            <input type="text" class="form-control" id="basementsList" name="listBasements" th:value="${elevator.listBasements}" readonly>
+            <input type="text" class="form-control" id="basementsList" name="listBasements" th:value="${elevator.listBasements}">
         </div>
         <div class="form-group">
             <label for="elevatorTopic">Topic:</label>
@@ -50,10 +57,10 @@
         </div>
         <div class="form-group" hidden>
             <label for="areaId">Area ID:</label>
-            <input type="number" class="form-control" id="areaId" name="areaId" th:value="${areaId}" readonly>
+            <input type="number" class="form-control" id="areaId" name="areaId" th:value="${elevator.areaId}" readonly>
         </div>
         <button type="submit" class="btn btn-primary">Save</button>
-        <a class="btn btn-secondary" th:href="@{/area/{areaId}(areaId=${areaId})}">Back</a>
+        <a class="btn btn-secondary" th:href="@{/area/{areaId}(areaId=${elevator.areaId})}">Back</a>
     </form>
 </div>
 
@@ -74,13 +81,12 @@
             floors.push(i);
         }
         floorsList.value = floors.join('->');
-        // document.getElementById('numFloors').readOnly = true;
         floorsList.readOnly = false;
     });
 
     document.getElementById('floorsList').addEventListener('input', function() {
         var floorsList = document.getElementById('floorsList').value;
-        var numFloors = floorsList.split('->').length;
+        var numFloors = floorsList.trim() === '' ? 0 : floorsList.split('->').length;
         document.getElementById('numFloors').value = numFloors;
     });
 
@@ -97,13 +103,12 @@
             basements.push('B' + i);
         }
         basementsList.value = basements.join('->');
-        // document.getElementById('numBasements').readOnly = true;
         basementsList.readOnly = false;
     });
 
     document.getElementById('basementsList').addEventListener('input', function() {
         var basementsList = document.getElementById('basementsList').value;
-        var numBasements = basementsList.split('->').length;
+        var numBasements = basementsList.trim() === '' ? 0 : basementsList.split('->').length;
         document.getElementById('numBasements').value = numBasements;
     });
 </script>
