--- a/src/main/resources/templates/elevator/simulation.html
+++ b/src/main/resources/templates/elevator/simulation.html
@@ -665,6 +665,8 @@
 <!--</script>-->
 <script th:inline="javascript">
     var floors = /*[[${floors}]]*/ [];
+    var elevatorList = /*[[${elevators}]]*/ [];
+    // alert(elevatorList[0].topic);
 
     // alert(floors.get(0).name)
 </script>
