--- a/src/main/resources/templates/building/edit.html
+++ b/src/main/resources/templates/building/edit.html
@@ -20,7 +20,7 @@
         <div class="form-group">
             <label for="country">Country:</label>
             <select class="form-control" id="country" name="country">
-                <option value="VN" th:selected="${building.country == 'VN'}">VN</option>
+                <option value="Vietnam" th:selected="${building.country == 'Vietnam'}">Vietnam</option>
             </select>
         </div>
         <div class="form-group">
