--- a/src/main/resources/templates/area/findById.html
+++ b/src/main/resources/templates/area/findById.html
@@ -32,7 +32,7 @@
                     <a class="btn btn-primary mr-2" th:href="@{/area/{areaId}/edit(areaId=${area.id})}">Update Area</a>
                     <a class="btn btn-success mr-2" th:href="@{/area/{areaId}/add-elevator(areaId=${area.id})}">Add Elevator</a>
                     <div th:if="${area.id == 1}">
-                    <a class="btn btn-dark mr-2" th:href="@{/area/{areaId}/elevator-simulation(areaId=${area.id})}">SIMULATION</a>
+<!--                    <a class="btn btn-dark mr-2" th:href="@{/area/{areaId}/elevator-simulation(areaId=${area.id})}">SIMULATION</a>-->
                     </div>
                 </div>
 
@@ -47,7 +47,14 @@
                         <div class="col-md-4" th:each="elevator : ${elevators}">
                             <div class="card mb-3">
                                 <div class="card-header">
-                                    <h6 th:text="${elevator.name}"></h6>
+                                    <div class="row d-flex align-items-center justify-content-between">
+                                        <div class="col-md-6">
+                                            <h6 th:text="${elevator.name}"></h6>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <a class="btn btn-dark btn-block" th:href="@{/elevator/simulation/{elevatorId}(elevatorId=${elevator.id})}">Simulation</a>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="card-body">
                                     <p>Number of Floors: <span th:text="${elevator.numFloors}"></span></p>
@@ -60,6 +67,7 @@
                                         <button class="btn btn-danger" type="submit" name="elevatorId" th:value="${elevator.id}">Delete</button>
                                     </form>
                                     </div>
+
                                 </div>
                             </div>
                         </div>
