--- a/src/main/resources/templates/elevator/simulation.html
+++ b/src/main/resources/templates/elevator/simulation.html
@@ -33,11 +33,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="/static/js/AlertError.js" type="text/javascript"></script>
 
-<!--    <script src="js/utils.js"></script>-->
-<!--    <script src="js/config.js"></script>-->
-<!--    <script src="js/building_display.js"></script>-->
-<!--    <script src="js/elevator-system.js"></script>-->
-<!--    <script src="js/binding.js"></script>-->
     <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js}" type="text/javascript"></script>
 </head>
 <body>
@@ -49,11 +44,11 @@
 <input class="input-info" th:id="password" name="mqttConnectionPassword" readonly th:value="${mqttConnection.password}" hidden>
 
 
-<div th:each="elevator : ${elevators}">
-    <div th:text="${elevator.id}" class="elevator-id" th:id="'elevatorId_' + ${elevator.id}" hidden></div>
-    <div th:text="${elevator.name}" class="elevator-name" th:id="'elevatorName_' + ${elevator.id}" hidden></div>
-    <div th:text="${elevator.numFloors}" class="elevator-num-floors" th:id="'elevatorNumFloors_' + ${elevator.id}" hidden></div>
-</div>
+<!--<div th:each="elevator : ${elevators}">-->
+<!--    <div th:text="${elevator.id}" class="elevator-id" th:id="'elevatorId_' + ${elevator.id}" hidden></div>-->
+<!--    <div th:text="${elevator.name}" class="elevator-name" th:id="'elevatorName_' + ${elevator.id}" hidden></div>-->
+<!--    <div th:text="${elevator.numFloors}" class="elevator-num-floors" th:id="'elevatorNumFloors_' + ${elevator.id}" hidden></div>-->
+<!--</div>-->
 <!--<button onclick="controller_move(1,4)" style="position: fixed; top: 10px; right: 10px;">Move</button>-->
 <!--<button onclick="controller_move(1,2)" style="position: fixed; top: 50px; right: 10px;">Move</button>-->
 <!--<button onclick="controller_move(1,6)" style="position: fixed; top: 100px; right: 10px;">Move</button>-->
@@ -664,9 +659,31 @@
 <!--    var password = document.getElementById("password").value;-->
 <!--</script>-->
 <script th:inline="javascript">
-    var floors = /*[[${floors}]]*/ [];
+    // var floors = /*[[${floors}]]*/ [];
+    var elevatorList = /*[[${elevators}]]*/ [];
+    var mqttConnection = /*[[${mqttConnection}]]*/ {};
+    alert(elevatorList[0].listFloors)
+    var floors = parseFloorString(elevatorList[0].listFloors);
+    alert(floors)
+    function parseFloorString(floorString) {
+        var floors = [];
+        var floorArray = floorString.split(/->/);
 
-    // alert(floors.get(0).name)
+        for (var i = 0; i < floorArray.length; i++) {
+            var floorName = floorArray[i].trim();
+            var floorLevel = i + 1; // Đánh số thứ tự từ 1
+
+            var floorObject = {
+                name: floorName,
+                floorLevel: floorLevel
+            };
+
+            floors.push(floorObject);
+        }
+
+        return floors;
+    }
 </script>
-<script src="/static/js/simulation/SimulationNavigator.js"></script>
+<script src="/static/js/simulation/Backup-SimulationNavigator.js"></script>
+<!--<script src="/static/js/MqttController.js"></script>-->
 </html>
