add open close door

--- a/src/main/resources/templates/elevator/simulation.html
+++ b/src/main/resources/templates/elevator/simulation.html
@@ -682,7 +682,7 @@
         return floors;
     }
 
-
+    var door_state = 'closed'
 
 </script>
 <script src="/static/js/simulation/Backup-SimulationNavigator.js"></script>
