--- a/src/main/resources/templates/building/areas.html
+++ b/src/main/resources/templates/building/areas.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Building and Areas</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script th:src="@{../static/js/DeleteConfirmation.js}" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -22,7 +23,6 @@
         <div class="card-body">
             <p><strong>City: </strong><span th:text="${building.city}"></span></p>
             <p><strong>Country: </strong><span th:text="${building.country}"></span></p>
-
             <div class="row">
                 <!-- Loop through areas -->
                 <div class="col-md-4" th:each="area : ${areas}">
