add meta viewpoint

--- a/src/main/resources/templates/elevator/simulation.html
+++ b/src/main/resources/templates/elevator/simulation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TKE Elevator</title>
     <link href="images/leaf.png" rel="shortcut icon" type="image/x-icon"/>
     <link
