--- a/src/main/resources/templates/user/admin/add.html
+++ b/src/main/resources/templates/user/admin/add.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Add User</title>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 </head>
