add multiple direction

--- a/src/main/resources/templates/elevator/elevator.html
+++ b/src/main/resources/templates/elevator/elevator.html
@@ -117,15 +117,15 @@
             </thead>
             <tbody>
             <tr>
-                <td><input id="display" name="display" readonly type="text" value="1"></td>
-                <td><input id="direction" name="direction" readonly type="text" value="▲"></td>
-                <td><input id="onoff" name="onoff" readonly type="text" value="ON"></td>
+                <td><input id="display" name="display" readonly type="text" value="-"></td>
+                <td><input id="direction" name="direction" readonly type="text" value="-"></td>
+                <td><input id="onoff" name="onoff" readonly type="text" value="DISCONNECTED"></td>
                 <td>
                     <!--                    <input id="doorstatus" name="doorstatus" readonly type="text" value="Open">-->
                     <img id="doorImage" src="/images/dooropen" alt="Door Status" style="height: 2em; width: auto;">
                 </td>
 <!--                <td><input id="liftstatus" name="liftstatus" readonly type="text" value="Auto"></td>-->
-                <td><input id="att" onclick="attClick()" readonly type="text" value="Active"></td>
+                <td><input id="att" onclick="attClick()" readonly type="text" value="Inactive"></td>
                 <!-- Add more rows for additional floors -->
             </tbody>
         </table>
