--- a/src/main/resources/templates/area/findById.html
+++ b/src/main/resources/templates/area/findById.html
@@ -6,9 +6,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10">
     <script th:src="@{../static/js/DeleteConfirmation.js}" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js}"></script>
     <!-- Your other stylesheets and scripts -->
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/static/js/AlertError.js" type="text/javascript"></script>
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
@@ -30,7 +35,7 @@
                     <form method="POST" th:action="@{/area/delete/{id}(id=${area.id})}" onsubmit="return confirmDelete(event)">
                         <button class="btn btn-danger mr-2" type="submit" name="areaId" th:value="${area.id}">Delete</button>
                     </form>
-                    <a class="btn btn-primary mr-2" th:href="@{/area/{areaId}/edit(areaId=${area.id})}">Update Area</a>
+                    <a class="btn btn-primary mr-2" th:href="@{/area/{areaId}/edit(areaId=${area.id})}">Update</a>
                     <a class="btn btn-success mr-2" th:href="@{/area/{areaId}/add-elevator(areaId=${area.id})}">Add Elevator</a>
                     <div th:if="${area.id == 1}">
 <!--                    <a class="btn btn-dark mr-2" th:href="@{/area/{areaId}/elevator-simulation(areaId=${area.id})}">SIMULATION</a>-->
@@ -58,10 +63,34 @@
                                     </div>
                                 </div>
                                 <div class="card-body">
-                                    <p>Number of Floors: <span th:text="${elevator.numFloors}"></span></p>
+                                    <p style="
+                                    width: 100px;
+                                    text-align: center;
+                                    height: 45px;
+        background-color: black;
+        color: red;
+        padding: 10px;
+        display: inline-block;
+        font-family: 'Digital-7', monospace;
+        /*border: 2px solid #00ff00;*/
+        /*box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);*/
+        border-radius: 5px;
+        text-align: center;
+        font-size: 16px;
+    ">
+<!--                                        <span>Position: </span>-->
+                                        <span th:class="'floor ' + ${elevator.id}" style="margin-left: -4px"></span>
+                                        <span th:class="'door ' + ${elevator.id}" style="margin-left: -4px"></span>
+                                        <span th:class="'direction ' + ${elevator.id}" style="margin-left: -4px;font-size: 19px; padding-top: -4px "></span>
+
+                                    </p>
+                                    <p>
+                                        <span>Status: </span>
+                                        <span th:class="'status ' + ${elevator.id}">Inactive</span>
+                                    </p>
                                     <!-- Add Get Info Button -->
                                     <div class="d-flex">
-                                    <a class="btn btn-primary mr-2" th:href="@{/elevator/{elevatorId}(elevatorId=${elevator.id})}">Get Info</a>
+                                    <a class="btn btn-primary mr-2" th:href="@{/elevator/{elevatorId}(elevatorId=${elevator.id})}">Control</a>
                                     <!-- Add Delete Elevator Button -->
                                         <a th:if="${role == 'ADMIN' || role == 'MANAGER'}"  class="btn btn-success mr-2" th:href="@{/elevator/{elevatorId}/edit(elevatorId=${elevator.id})}">Edit</a>
                                     <form  th:if="${role == 'ADMIN' || role == 'MANAGER'}" method="POST" th:action="@{/elevator/delete/{id}(id=${elevator.id})}" onsubmit="return confirmDelete(event)">
@@ -85,6 +114,12 @@
         <a class="btn btn-secondary" th:href="@{/building/{buildingId}(buildingId=${area.building.id})}">Back</a>
     </div>
 </div>
-
+<script th:inline="javascript">
+    var mqttConnection = /*[[${mqttConnection}]]*/ {};
+    var elevatorList = /*[[${elevators}]]*/ [];
+    // $('.PL1.floor').text('info.floor');
+</script>
+<script src="/static/js/MqttController.js" type="text/javascript"></script>
+<script src="/static/js/MQTTAreaListElevator.js" type="text/javascript"></script>
 </body>
 </html>
