--- a/src/main/resources/templates/area/add.html
+++ b/src/main/resources/templates/area/add.html
@@ -21,7 +21,8 @@
             <textarea class="form-control" id="areaDescription" name="description" rows="3"></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Save</button>
-        <a class="btn btn-secondary" th:href="@{/building/{buildingId}(buildingId=${building.id})}">Back</a>
+<!--        <a class="btn btn-secondary" th:href="@{/building/{buildingId}(buildingId=${building.id})}">Back</a>-->
+        <a class="btn btn-secondary" th:href="@{/building/all}">Back</a>
     </form>
 </div>
 
