--- a/src/main/resources/templates/area/findById.html
+++ b/src/main/resources/templates/area/findById.html
@@ -28,7 +28,7 @@
             <h5 th:text="${area.name}"></h5>
         </div>
         <div class="card-body">
-            <p th:text="${area.description}"></p>
+<!--            <p th:text="${area.description}"></p>-->
 
             <!-- Action Buttons for Area -->
                 <div th:if="${role == 'ADMIN' || role == 'MANAGER'}" class="mt-3 d-flex">
@@ -111,7 +111,7 @@
 <!-- Action Buttons -->
 <div class="container mt-3">
     <div class="float-right">
-        <a class="btn btn-secondary" th:href="@{/building/{buildingId}(buildingId=${area.building.id})}">Back</a>
+        <a class="btn btn-secondary" th:href="@{/building/{buildingId}(buildingId=${area.buildingId})}">Back</a>
     </div>
 </div>
 <script th:inline="javascript">
