--- a/src/main/resources/templates/building/areas.html
+++ b/src/main/resources/templates/building/areas.html
@@ -32,7 +32,7 @@
                             <h5 th:text="${area.name}"></h5>
                         </div>
                         <div class="card-body">
-                            <p th:text="${area.description}"></p>
+<!--                            <p th:text="${area.description}"></p>-->
                             <a class="btn btn-primary" th:href="@{/area/{areaId}(areaId=${area.id})}">View Details</a>
 <!--                            <a class="btn btn-secondary mr-2" th:if="${area.id == 1}" th:href="@{/area/{areaId}/elevator-simulation(areaId=${area.id})}">Simulation</a>-->
                         </div>
