--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -49,8 +49,11 @@
           </li>
 
           <li class="nav-item ml-auto">
-            <a class="nav-link navbar-text" href="/building/1">Building</a>
+            <a th:if="${role == 'ADMIN' || role == 'MANAGER'}" class="nav-link navbar-text" href="/building/all">Building</a>
           </li>
+            <li class="nav-item ml-auto">
+                <a th:if="${ role == 'USER'}" class="nav-link navbar-text" href="/building/1">Building</a>
+            </li>
             <li class="nav-item ml-auto">
                 <a th:if="${role == 'ADMIN'}" class="nav-link navbar-text" href="/permission">Permission</a>
             </li>
