--- a/src/main/resources/templates/elevator/elevator.html
+++ b/src/main/resources/templates/elevator/elevator.html
@@ -119,10 +119,10 @@
             <tr>
                 <td><input id="display" name="display" readonly type="text" value="-"></td>
                 <td><input id="direction" name="direction" readonly type="text" value="-"></td>
-                <td><input id="onoff" name="onoff" readonly type="text" value="DISCONNECTED"></td>
+                <td><input id="onoff" name="onoff" readonly type="text" value="Unavailable"></td>
                 <td>
                     <!--                    <input id="doorstatus" name="doorstatus" readonly type="text" value="Open">-->
-                    <img id="doorImage" src="/images/dooropen" alt="Door Status" style="height: 2em; width: auto;">
+                    <img id="doorImage" src="/images/doorclose" alt="Door Status" style="height: 2em; width: auto;">
                 </td>
 <!--                <td><input id="liftstatus" name="liftstatus" readonly type="text" value="Auto"></td>-->
                 <td><input id="att" onclick="attClick()" readonly type="text" value="Inactive"></td>
