--- a/src/main/resources/templates/area/add.html
+++ b/src/main/resources/templates/area/add.html
@@ -22,7 +22,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Save</button>
 <!--        <a class="btn btn-secondary" th:href="@{/building/{buildingId}(buildingId=${building.id})}">Back</a>-->
-        <a class="btn btn-secondary" th:href="@{/building/all}">Back</a>
+        <a class="btn btn-secondary" th:href="@{/building/{buildingId}(buildingId=${building.id})}">Back</a>
     </form>
 </div>
 
