--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -60,7 +60,7 @@
     <!-- Mobile Header -->
     <nav class="navbar navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">I-Connect</a>
+<!--            <a class="navbar-brand" href="#">I-Connect</a>-->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobileNavbar"
                     aria-controls="mobileNavbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
