--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -19,7 +19,7 @@
 <body>
 <header>
     <!-- Desktop Header -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5 d-none d-lg-block">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5 d-none d-md-block">
         <div class="container">
             <a class="navbar-brand ml-4" href="#">I-Connect</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -58,9 +58,9 @@
     </nav>
 
     <!-- Mobile Header -->
-    <nav class="navbar navbar-dark bg-dark d-lg-none">
+    <nav class="navbar navbar-dark bg-dark d-block d-md-none">
         <div class="container">
-            <a class="navbar-brand" href="#">I-Connect</a>
+<!--            <a class="navbar-brand" href="#">I-Connect</a>-->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mobileNavbar"
                     aria-controls="mobileNavbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
