--- a/src/main/resources/templates/mqttconnection/detail.html
+++ b/src/main/resources/templates/mqttconnection/detail.html
@@ -6,6 +6,7 @@
     <!-- Add Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
           crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
