--- a/src/main/resources/templates/area/findById.html
+++ b/src/main/resources/templates/area/findById.html
@@ -10,6 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js}"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <!-- Your other stylesheets and scripts -->
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
