--- a/src/main/resources/templates/area/findById.html
+++ b/src/main/resources/templates/area/findById.html
@@ -110,11 +110,11 @@
 </div>
 
 <!-- Action Buttons -->
-<div class="container mt-3">
-    <div class="float-right">
-        <a class="btn btn-secondary" th:href="@{/building/{buildingId}(buildingId=${area.buildingId})}">Back</a>
-    </div>
-</div>
+<!--<div class="container mt-3">-->
+<!--    <div class="float-right">-->
+<!--        <a class="btn btn-secondary" th:href="@{/building/{buildingId}(buildingId=${area.buildingId})}">Back</a>-->
+<!--    </div>-->
+<!--</div>-->
 <script th:inline="javascript">
     var mqttConnection = /*[[${mqttConnection}]]*/ {};
     var elevatorList = /*[[${elevators}]]*/ [];
