--- a/src/main/resources/templates/elevator/elevator.html
+++ b/src/main/resources/templates/elevator/elevator.html
@@ -279,11 +279,11 @@
 
 
     </div>
-    <div class="text-end">
-        <a class="btn btn-secondary" th:href="@{/area/{areaid}(areaid=${elevatorList[0].areaId})}">
-            Back
-        </a>
-    </div>
+<!--    <div class="text-end">-->
+<!--        <a class="btn btn-secondary" th:href="@{/area/{areaid}(areaid=${elevatorList[0].areaId})}">-->
+<!--            Back-->
+<!--        </a>-->
+<!--    </div>-->
     <input class="input-info" id="host" name="mqttConnectionHost" readonly th:value="${mqttConnection.host}" hidden>
     <input class="input-info" id="port" name="mqttConnectionPort" readonly th:value="${mqttConnection.port}" hidden>
     <input class="input-info" id="username" name="mqttConnectionUsername" readonly th:value="${mqttConnection.username}" hidden>
