--- a/src/main/resources/templates/area/edit.html
+++ b/src/main/resources/templates/area/edit.html
@@ -34,7 +34,7 @@
 
 
         <button type="submit" class="btn btn-primary">Save</button>
-        <a class="btn btn-secondary" th:href="@{/area/{areaId}(areaId=${area.id})}">Back</a>
+<!--        <a class="btn btn-secondary" th:href="@{/area/{areaId}(areaId=${area.id})}">Back</a>-->
     </form>
 </div>
 
