--- a/src/main/resources/templates/building/add.html
+++ b/src/main/resources/templates/building/add.html
@@ -36,7 +36,7 @@
         </div>
 
         <button type="submit" class="btn btn-primary">Save</button>
-        <a class="btn btn-secondary" th:href="@{/building}">Back</a>
+<!--        <a class="btn btn-secondary" th:href="@{/building}">Back</a>-->
     </form>
 </div>
 
