--- a/src/main/resources/templates/building/all.html
+++ b/src/main/resources/templates/building/all.html
@@ -57,7 +57,7 @@
                     <div class="float-right d-flex">
                         <a class="btn btn-success mr-2" th:href="@{/building/{buildingId}/add-area(buildingId=${building.id})}">Add Area</a>
                         <a class="btn btn-primary mr-2" th:href="@{/building/{buildingId}/edit(buildingId=${building.id})}">Update Building</a>
-                        <form method="POST" th:action="@{/building/{id}/delete(id=${building.id})}" onsubmit="return confirmDelete(event)">
+                        <form method="POST" th:action="@{/building/{id}/delete(id=${building.id})}" onsubmit="return confirmDeleteBuilding(event)">
                             <button class="btn btn-danger mr-2" type="submit" name="areaId" th:value="${building.id}">Delete Building</button>
                         </form>
                     </div>
