--- a/src/main/resources/templates/elevator/add.html
+++ b/src/main/resources/templates/elevator/add.html
@@ -45,7 +45,7 @@
             <input type="number" class="form-control" id="areaId" name="areaId" th:value="${area.id}" readonly>
         </div>
         <button type="submit" class="btn btn-primary">Save</button>
-        <a class="btn btn-secondary" th:href="@{/area/{areaId}(areaId=${area.id})}">Back</a>
+<!--        <a class="btn btn-secondary" th:href="@{/area/{areaId}(areaId=${area.id})}">Back</a>-->
     </form>
 </div>
 
