--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -43,9 +43,9 @@
                 <button type="submit" class="btn btn-success">Add User</button>
             </form>
 
-            <div class="mt-3">
-                <a href="/user" class="btn btn-secondary">Back to User List</a>
-            </div>
+<!--            <div class="mt-3">-->
+<!--                <a href="/user" class="btn btn-secondary">Back to User List</a>-->
+<!--            </div>-->
         </div>
     </div>
 </div>
