--- a/src/main/resources/templates/user/admin/add.html
+++ b/src/main/resources/templates/user/admin/add.html
@@ -35,9 +35,9 @@
                 <button type="submit" class="btn btn-success">Add User</button>
             </form>
 
-            <div class="mt-3">
-                <a href="/admin/user" class="btn btn-secondary">Back to User List</a>
-            </div>
+<!--            <div class="mt-3">-->
+<!--                <a href="/admin/user" class="btn btn-secondary">Back to User List</a>-->
+<!--            </div>-->
         </div>
     </div>
 </div>
