--- a/src/main/resources/templates/user/users.html
+++ b/src/main/resources/templates/user/users.html
@@ -4,12 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>User List</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10">
     <script th:src="@{../static/js/DeleteConfirmation.js}" type="text/javascript"></script>
     <script th:src="@{../static/js/ResetPassword.js}" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://unpkg.com/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script> <!-- Thêm dòng này để tải đúng tập tin SweetAlert2 -->
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
@@ -36,27 +36,18 @@
                     <form method="POST" th:action="@{/user/{userId}/reset-password(userId=${user.userId})}" onsubmit="return confirmResetPassword(event)">
                         <button class="btn btn-primary mr-2" type="submit">Reset Password</button>
                     </form>
-
                 </td>
                 <td>
                     <form method="POST" th:action="@{/user/deactivate/{id}(id=${user.userId})}" onsubmit="return confirmDelete(event)">
                         <button class="btn btn-danger" type="submit" name="userId" th:value="${user.userId}">Delete</button>
                     </form>
-
                 </td>
             </tr>
             </tbody>
         </table>
 
         <button class="btn btn-success" onclick="window.location.href='/user/add'" type="button">Add User</button>
-
-
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<!--        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>-->
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     </div>
 </div>
-<!--<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>-->
-<!--<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>-->
 </body>
 </html>
